lesson23/diagnostic-pod.yaml
# diagnostic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic-pod
  namespace: dev
spec:
  serviceAccountName: diagnostic-sa
  containers:
  - name: diagnostic-container
    image: bitnami/kubectl:latest
    command: ['sh', '-c', 'while true; do echo "Detected WordPress Pods:"; kubectl get pods -l app=wordpress -n dev; sleep 60; done']
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000
